RESOLVED FIXED203085
[LFC][BFC] Fix block level formatting root inflow box height computation
https://bugs.webkit.org/show_bug.cgi?id=203085
Summary [LFC][BFC] Fix block level formatting root inflow box height computation
alan
Reported 2019-10-17 09:11:01 PDT
10.6.7 'Auto' heights for block formatting context roots
Attachments
Patch (2.48 KB, patch)
2019-10-17 09:20 PDT, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-10-17 09:11:24 PDT
alan
Comment 2 2019-10-17 09:20:14 PDT
alan
Comment 3 2019-10-18 07:54:57 PDT
Note You need to log in before you can comment on or make changes to this bug.