[LFC][BFC] Fix block level formatting root inflow box height computation https://bugs.webkit.org/show_bug.cgi?id=203085 <rdar://problem/56372306>

Reviewed by Antti Koivisto.

Section 10.6.7 (https://www.w3.org/TR/CSS22/visudet.html#root-height) defines the height computation for block level formatting context roots.
We already use it for floats, out-of-flow and block level boxes when overflow computes to not "visible".
This patch makes generic in-flow non-replaced BFC roots (e.g. principal block container box for <table>) compute their heights according to 10.6.7.

* layout/blockformatting/BlockFormattingContextGeometry.cpp:
(WebCore::Layout::BlockFormattingContext::Geometry::inFlowNonReplacedHeightAndMargin):

Canonical link: https://commits.webkit.org/216546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251280 268f45cc-cd09-0410-ab3c-d52691b4dbfc